frontend/test/should_pass/array_identical_assignment.grg
using array_model_001;

rule assi {
	a:A;
	
	modify {
		eval {
			a.niceArray = a.niceArray;
			a.spiceArray = a.spiceArray;
		}
	}
}
