frontend/test/should_fail/array_002.grg
using array_model_001;

rule assignWrongType {
	a:A;
	
	modify {
		eval {
			a.intArray = a.intArray + array<int>{ a.stringValue };
		}
	}
}